[package]
name = "fractal-btrfs-wrappers"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Elsen <patrick@ether.ai>"]
description = "Async wrappers around BTRFS utilities."
license = "AGPL-3.0-only"
repository = "https://github.com/fractalnetworksco/btrfs-wrappers"

[dependencies]
anyhow = "1.0.58"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.5.6"
tokio = { version = "1", features = ["process"] }
